# GLSLShaderToy

./: .gitignore  CMakeLists.txt  LICENSE  Main.qml  Readme.md  main.cpp
shaders/: common.vert
src/components/: CShaderView.qml
src/core/: FileHelper.h  HighlighterShader.cpp  HighlighterShader.h  StructModel.h  myrhiitem.cpp  myrhiitem.h  rhipingpongitem.cpp  rhipingpongitem.h
